[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/game/Game.gd" type="Script" id=1]
[ext_resource path="res://tilesets/Tile.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/spawner/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/TimeProgress.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Single Step.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sounds/Drifting Beyond the Stars.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.101961, 0.0941176, 0.0941176, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65567, 0, 0, 131072, 0, 0, 131103, 0, 0, 196608, 0, 0, 196639, 0, 0, 262144, 0, 0, 262175, 0, 0, 327680, 0, 0, 327711, 0, 0, 393216, 0, 0, 393247, 0, 0, 458752, 0, 0, 458783, 0, 0, 524288, 0, 0, 524319, 0, 0, 589824, 0, 0, 589855, 0, 0, 655360, 0, 0, 655391, 0, 0, 720896, 0, 0, 720927, 0, 0, 786432, 0, 0, 786463, 0, 0, 851968, 0, 0, 851999, 0, 0, 917504, 0, 0, 917535, 0, 0, 983040, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114143, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0 )

[node name="Spawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 85.7036, 74.8206 )

[node name="TimeProgress" type="ProgressBar" parent="."]
editor/display_folded = true
margin_left = -4.0
margin_top = 574.0
margin_right = 1028.0
margin_bottom = 616.0
max_value = 180.0
step = 1.0
value = 180.0
percent_visible = false
script = ExtResource( 4 )

[node name="TimeLabel" type="Label" parent="TimeProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "03:00"

[node name="Timer" type="Timer" parent="TimeProgress"]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 517.6, 335.6 )
z_index = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuContainer" type="CenterContainer" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -110.5
margin_right = 177.0
margin_bottom = 110.5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuContainer"]
margin_right = 354.0
margin_bottom = 257.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Before, I was"

[node name="LabelMessage" type="Label" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 354.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 2 )
text = "everybody can change."
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 354.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "Q - DASH - FIFTHTEEN seconds cooldown"
align = 1

[node name="Label4" type="Label" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 354.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 2 )
text = "W - INVISIBLE - THIRTY seconds cooldown"
align = 1

[node name="Start" type="Button" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 354.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Quit" type="Button" parent="CanvasLayer/MenuContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 354.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 4 )
text = "QUIT"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="timeout" from="TimeProgress/Timer" to="TimeProgress" method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
